[package]
name = "commache"
description = "Command Cache"
version = "0.1.0"
edition = "2021"
authors = ["Oli Dacombe <olidacombe@gmail.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
color-backtrace = "0.5.1"
config = "0.13.3"
derive_builder = "0.12.0"
lazy_static = "1.4.0"
rocksdb = "0.20.1"
serde = { version = "1.0.158", features = ["derive"] }
tracing = "0.1.34"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
